--- a/GB-HW2-Calculator-SM/Base.lproj/Main.storyboard
+++ b/GB-HW2-Calculator-SM/Base.lproj/Main.storyboard
@@ -16,9 +16,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AHk-xW-XXk">
-                                <rect key="frame" x="20" y="174" width="372" height="55"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AHk-xW-XXk">
+                                <rect key="frame" x="20" y="193" width="372" height="45"/>
                                 <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="wig-md-5af"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="31"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
@@ -228,6 +231,7 @@
                         <color key="backgroundColor" systemColor="labelColor"/>
                         <constraints>
                             <constraint firstItem="0ta-q6-tXl" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="300" id="DIc-Hr-wvR"/>
+                            <constraint firstItem="0ta-q6-tXl" firstAttribute="top" secondItem="AHk-xW-XXk" secondAttribute="bottom" constant="106" id="GO3-tz-imt"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="0ta-q6-tXl" secondAttribute="bottom" constant="15" id="OwZ-Qn-HZh"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="AHk-xW-XXk" secondAttribute="trailing" constant="22" id="Zw4-G0-kXe"/>
                             <constraint firstItem="AHk-xW-XXk" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="cQ1-7E-3Vy"/>
